# Racing-Analysis

./: .dockerignore  .env.example  .gitignore  ADVANCED_AGENT_SKILLS_COMPLETE.md  AGENT_COMPARISON_TABLE.md  AGENT_SKILLS_ARCHITECTURE.md  BETFAIR_INTEGRATION_COMPLETE.md  BETFAIR_QUICKSTART.md  CHANGES_SINCE_DELEGATION_REVIEW.md  CLAUDE_WORK_COMPLETE.md  CONTEXT_ENGINEERING_COMPLETE.md  COPILOT_AGENT_SETUP_COMPLETE.md  COPILOT_AGENT_SKILLS_SYSTEM_INDEX.md  COPILOT_CAPABILITIES_AND_REPO_UNDERSTANDING.md  COPILOT_QUICK_REFERENCE.md  COPILOT_SETUP_GUIDE.md  DATA_SOURCE_MAPPING_AND_SCRAPING_ARCHITECTURE.md  DAY_1_2_COMPLETION_REPORT.md  DELEGATION_NEXT_STEPS.md  DELEGATION_PHASE2_QUALITATIVE.md  Dockerfile  END_TO_END_SYSTEM_OVERVIEW.md  GLM_SETUP_COMPLETE.md  GRAPHQL_SCRAPER_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_FORWARD.md  IMPLEMENTATION_REALITY_CHECK.md  IMPLEMENTATION_SUMMARY.md  INDEX_REPOSITORY_UNDERSTANDING.md  LICENSE  MASTER_PLAN.md  MODEL_RESEARCH_2025.md  Makefile  PHASE2_DELEGATION_SUMMARY.md  PHASE_0_COMPLETE.md  PHASE_1_WEEK_1_CHECKLIST.md  PROJECT_TODO.md  RACING_COM_API_DISCOVERY.md  README.md  README_COPILOT_AGENT.md  (+21 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: COPILOT_INSTRUCTIONS.md  OPENAI_CODEX_INSTRUCTIONS.md
.github/AGENT_SKILLS/: README.md  analysis-insights.md  architecture-design.md  creativity-innovation.md  data-engineering.md  deep-critical-analysis.md  integration-orchestration.md  model-development.md  performance-optimization.md  security-risk-management.md  testing-qa.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: database.yml
configs/orchestration/: agents.yml
dev/: SESSION_NOTES.md
docs/: CHATGPT5_DEEP_RESEARCH_ANALYSIS.md  COMPREHENSIVE_INFORMATION_TAXONOMY.md  DOCS_MANIFEST.md  DOCUMENTATION_INDEXING_CRITICAL_ANALYSIS.md  FUSION_MODEL_ARCHITECTURE.md  FUSION_MODEL_CRITICAL_ANALYSIS.md  GET_STARTED.md  PHASE_0_SUMMARY.md  PROGRESS.md  QUALITATIVE_SUMMARY.md  QUICK_START.md
docs/COMPREHENSIVE_TAXONOMY_MASTER/: PART_01_CATEGORY_01_02.md  PART_02_CATEGORY_03.md  PART_03_CATEGORY_04.md  PART_04_CATEGORY_05_06.md  PART_05_CATEGORY_07.md  PART_06_CATEGORY_08.md  PART_07_CATEGORY_09_10.md  PART_08_CATEGORY_11_12.md  PART_09_CATEGORY_13_14.md  PART_10_CATEGORY_15_16.md  PART_11_CATEGORY_17.md  (+15 more)
examples/: advanced_ai_features.py  copilot_api_example.py  copilot_racing_integration.py  example_source_planner.py
project_context/: AI_AGENT_INSTRUCTIONS.md  MASTER_CONTEXT.md  README.md  project_snapshot.json
scripts/: activate_extension.py  backfill_historical.py  check_extension.py  end_to_end_demo.py  generate_project_snapshot.py  reload_extension.py  setup_db.py  simple_data_demo.py  test_copilot_bridge.py  trial_multi_agent.py  verify_copilot_api.py  verify_github_copilot.py  verify_glm_setup.py
src/: __init__.py
tests/: conftest.py
(+130 files in other folders)
